Crash when opening user panel in live session
gnome-control-center crashes when trying to open the user panel. The crash happened in a live session with version 3.29.90, the ISO file used to test can be downloaded here: https://kojipkgs.fedoraproject.org/compose/rawhide/Fedora-Rawhide-20180827.n.0/compose/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-Rawhide-20180827.n.0.iso
Error message:
(gnome-control-center:3489): user-accounts-cc-panel-ERROR **: 08:17:19.439: failed to read pwquality configuration: minlen
Steps to reproduce:
- Open GNOME Settings in a live session
- Select the Users panel