user-accounts: Do not set user for password dialog redundantly

um_password_dialog_set_user() is called from on_permission_changed()
respective show_user(), which more or less means on every change in
the panel. It it pretty enough to call this before opening the password
dialog, which is already done over change_password() callback. Let's
remove the redundant call which may lead to unwanted failures among
others.

https://gitlab.gnome.org/GNOME/gnome-control-center/issues/171